prevent wrapping
button smaller, removed x axis padding

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -271,3 +271,11 @@ input[type=text]:focus {
     
 }
 
+.item_figcaption {
+    margin-top: .75em;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    /*This is how you do the Ellipsis based on the shape of its container*/
+}
